seciruty sloved